# cmsisdsp-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  wrapper.h
.cargo/: config.toml
.github/workflows/: ci.yml
include/: float.h  limits.h  math.h  stdint.h  string.h
src/: ffi.rs  ffi_vfp.rs  lib.rs
